# logger

./: CMakeLists.txt  README.md
docs/: requirement.md
logger/include/logger/: console_sink.hpp  file_sink.hpp  log.hpp  log_macros.hpp  log_sink.hpp  logger_config.hpp
logger/src/: console_sink.cpp  file_sink.cpp  log.cpp
logger/tests/: test_log.cpp  test_thread_safety.cpp
